able to see other users details

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,14 +9,10 @@
 </head>
 <body>
     <h1>Welcome to Code Fellowship</h1>
-    <form action="/signup" method="POST">
-        Username: <input type="text" name="userName">
+    <form action="/login" method="POST">
+        Username: <input type="text" name="username">
         Password: <input type="password" name="password">
-        First Name: <input type="text" name="firstName">
-        Last Name: <input type="text" name="lastName">
-        Date: <input type="date" name="date">
-        Bio: <input type="text" name="bio">
-        <input type="submit">
+        <input type="submit" value="Sign In">
     </form>
 </body>
 </html>
