--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,15 +10,16 @@
 <body>
     <h1>Welcome to Code Fellowship</h1>
     <a href="/sign-up"><button>Sign up</button></a>
-    <form action="/signup" method="POST">
-        Username: <input type="text" name="userName">
-        Password: <input type="password" name="password">
-        First Name: <input type="text" name="firstName">
-        Last Name: <input type="text" name="lastName">
-        Date: <input type="date" name="date">
-        Bio: <input type="text" name="firstName">
-        <input type="submit">
-    </form>
+    <a href="/log-in"><button>Sign in</button></a>
+<!--    <form action="/signup" method="POST">-->
+<!--        Username: <input type="text" name="userName">-->
+<!--        Password: <input type="password" name="password">-->
+<!--        First Name: <input type="text" name="firstName">-->
+<!--        Last Name: <input type="text" name="lastName">-->
+<!--        Date: <input type="date" name="date">-->
+<!--        Bio: <input type="text" name="bio">-->
+<!--        <input type="submit">-->
+<!--    </form>-->
 
 </body>
 </html>
