--- a/src/main/resources/templates/userDetails.html
+++ b/src/main/resources/templates/userDetails.html
@@ -18,12 +18,11 @@
     </nav>
     <h1>[[${Principal}]], you are visiting [[${visitingUser}]]'s page</h1>
 
-    <form action="/user/following" method="POST">
-        <h3>Find folks to follow</h3>
-        <label for="followingOthers">User Looking to Follow</label>
-        <select name="followingOther" id="">
-            <option th:each="user : ${userWeAreVisiting" value=""></option>
-        </select>
+    <form action="/followMe" method="POST">
+
+        <input type="hidden" name="toBeFollowedId" th:value="${userIdWeAreVisiting}">
+        <input type="submit" th:value="follow + ' ' + ${visitingUser}">
+
     </form>
 
 <!--    Write post on other users page and view all the posts on
