--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,16 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <h1>Welcome to Code Fellowship</h1>
     <form action="/signup" method="POST">
-        Username: <input type="text" name="userName">
-        Password: <input type="password" name="password">
-        First Name: <input type="text" name="firstName">
-        Last Name: <input type="text" name="lastName">
-        Date: <input type="date" name="date">
-        Bio: <input type="text" name="bio">
+        <label>Username: <input type="text" name="userName"></label>
+        <label>Password: <input type="password" name="password"></label>
+        <label>First Name: <input type="text" name="firstName"></label>
+        <label>Last Name: <input type="text" name="lastName"></label>
+        <label>Date: <input type="date" name="date"></label>
+        <label>Bio: <input type="text" name="bio"></label>
+
         <input type="submit">
     </form>
 </body>
