--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,20 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Welcome to Code Fellowship</h1>
+    <h1>WELCOME TO CODEFELLOWSHIP CONNECT</h1>
     <a href="/sign-up"><button>Sign up</button></a>
     <a href="/log-in"><button>Sign in</button></a>
-<!--    <form action="/signup" method="POST">-->
-<!--        Username: <input type="text" name="userName">-->
-<!--        Password: <input type="password" name="password">-->
-<!--        First Name: <input type="text" name="firstName">-->
-<!--        Last Name: <input type="text" name="lastName">-->
-<!--        Date: <input type="date" name="date">-->
-<!--        Bio: <input type="text" name="bio">-->
-<!--        <input type="submit">-->
-<!--    </form>-->
-
 </body>
 </html>
