--- a/src/main/resources/templates/userDetails.html
+++ b/src/main/resources/templates/userDetails.html
@@ -1,22 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-                <a href="/logout">Sign out</a>
-            </li>
-        </ul>
-    </nav>
-    <h1>[[${Principal}]], you are visiting [[${visitingUser}]]'s page</h1>
+    <header th:insert="fragments/header.html :: header"></header>
+    <h2>[[${Principal}]], you are visiting [[${visitingUser}]]'s page</h2>
 
     <form action="/followMe" method="POST">
 
@@ -29,11 +23,12 @@
         that user-->
     <form action="/userDetails" method="POST">
         <ul>
-            <li th:each="post: ${userWeAreVisiting.posts}">
-                <p>[[${post.body}]] [[${post.createdAt}]]</p>
+            <li id="posts" th:each="post: ${userWeAreVisiting.posts}">
+                <p id="post">[[${post.body}]] [[${post.createdAt}]]</p>
             </li>
         </ul>
         <input type="hidden" name="id" th:value="${userIdWeAreVisiting}">
+<!--        <input type="hidden" name="postedBy" th:value="${Principal}">-->
         Message: <input type="text" name="body">
         <input type="submit" name="Post">
     </form>
